styles.css
:root {
    --accent-color: #283040;
    --accent-bright: #497AA6;
    --background-dark: #252526;
    --heading-color: var(--accent-color);
    --main-text-color: #fff;
    --alt-text-color: rgb(58, 58, 58);
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
    height: 100vh;
    background-color: var(--background-dark);
}

div {
    overflow: hidden;
}

h1, h2, h3 {
    font-family: 'Open Sans';
}

.full-width {
    width: 100%;
}

.full-height {
    height: 100%;
}

.screen-full-height {
    height: 100vh;
}

.between {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
/* -----------------------------IMAGE CONTAINERS ---------------------------*/
.image-container {
    z-index: 8;
    position: relative;
    background-image: url("/assets/banner_vert.jpg");
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
}

@media screen and (min-width: 825px) {
    .image-container {
        background-image: url("/assets/banner_horz.JPG");
        background-position: 50% 10%;
    }
}
/*--------------------------IMAGE OVERLAYS------------------------------------*/
.overlay {
    /* div on top of the image */
    position: absolute;
    top: 70vh;
    left: 10%;
    height: auto;
    width: 500px;
    padding: 20px;
    color: var(--main-text-color);
    background-color: rgba(0,0,0,0.5);
    display: flex;
    align-items: center;
    text-align: center;

    outline: none;
    box-shadow: none;
    padding: 10px 25px;
    border: 3px solid white;
    z-index: 9;
}

.overlay p {
    padding: 10px;
    margin: 0;
}

.responsive h1 {
    font-size: 45px;
}

.subcaption {
    font-size: 18px;
    font-weight: normal;
}

#my-name {
    font-family: 'Ubuntu';
}

/*------------------------------- NAV BAR ------------------------------------*/

#navbar {
    display: flex;
    background-color: #000;
    position: relative;
    z-index: 1;
}

.nav-button {
    flex: 1; /* Make the buttons take up equal width */
    text-align: center;
    padding: 15px 20px;
    text-decoration: none;
    z-index: inherit;
    cursor: pointer;
    font-family: 'Open Sans';
}

.nav-button:hover {
    background-color: #222;
}

#navbar a {
    font-weight: bold;
    font-size: 20px;
    color: var(--main-text-color);
}


/*--------------------------------------SECTIONS ----------------------------*/
.section {
    height: auto;
    display: flex;
    flex-direction: row;
    color: var(--main-text-color);
}

.featured {
    justify-content: center;
    align-items: center;
    position: relative;
}

#about {
    z-index: -3;
}
#resume {
    z-index: -2;
}

#projects {
    z-index: -1;
}

/*-------------------------------- ABOUT ME ----------------------------------*/
#about img {
    width: 40%;
    height: 40vh;
    object-fit: cover;
}

#about .text-box {
    width: 800px;
}

#about .summary {
    text-align: left;
    padding: 0 15px 10px 15px;
}

/*----------------------------- Resume ---------------------------------------*/
#resume {
    display: block;
}

#resume-download {
    background-color: #0000;
    width: 100%;
    padding: 20px;
}

#resume-download .button {
    width: auto;
    display: inline-block;
    margin-left: 50%;
    transform: translateX(-50%);
    text-decoration: none;
    font-weight: bold;
}

.star {
    filter: saturate(0%) brightness(2000%);
}

.section-break {
    padding-bottom: 10px;
    padding-top: 20px;
}

.section-break h2 {
    background-color: var(--heading-color);
    padding: 5px 15px 5px 15px;
    margin-left: 20px;
    display: inline;
}

.resume-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
    padding: 20px;
}

#skills-grid {
    padding-top: 0;
}

#skills-grid .between {
    align-items: center;
    margin-top: 7px;
    margin-bottom: 7px;
}

.star-holder {
    font-family: 'Zen Maru Gothic', serif;
    text-align: right;
}

.certification p {
    margin: 0;
    padding: 0;
}
.certification:hover {
    color: var(--accent-bright);
}


/*----------------------------- CAREERS --------------------------------------*/
.timeline {
    position: relative;
    margin-bottom: 2vh;
}

.timeline-info .between {
    margin-bottom: 1vh;
    margin-top: 1vh;
}

.timeline-event-title {
    margin: 5px 0 5px 0;
}

.time {
    text-align: right;
    padding: 0;
    margin: 0;
    padding-right: 20px;
    margin-top: 5px;
    font-size: 15px;
    font-family: 'Montserrat', sans-serif;
}

.career-info ul {
    margin-top: 5px;
}

.subtitle {
    margin: 0;
    font-size: 15px;
}

/* line beside the timeline */
.timeline::before {
    content: "";
    position: absolute;
    top: 1%;
    left: 2rem;
    width: 3px;
    height: 100%;
    background-color: var(--main-text-color);
}

/* The circle beside the timeline */
.timeline-event-title::before {
    content: "";
    position: absolute;
    width:  15px;
    height: 15px;
    border-radius: 50%;
    background-color: var(--background-dark);
    border: var(--main-text-color);
    border-style: solid;
    border-width: 3px;
    left: 1.5rem;
}

.timeline-info {
    width: 80%;
    margin-left: 4rem;
}

.timeline-grid {
    grid-template-columns: 30% 70%;
}

@media screen and (max-width: 825px) {
    .resume-grid {
        grid-template-columns: repeat(1, 1fr);
    }
    .time {
        text-align: left;
        margin-top: 5px;
    }
    .timeline-grid {
        gap: 0px;
    }
}

@media screen and (min-width: 825px) {
    .timeline::before {
        left: 33%;
    }
    .timeline-event-title::before {
        transform: translateX(-45%);
        left: 33%;
    }
    .section-break {
        display: flex;
        justify-content: center;
    }

    .section-break h2 {
        margin: 0;
    }

}
/* ... */

